# Multi-Cloud-AI-Workload-Manager-Deployment-Platform

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: __init__.py  artifacts.py  autoscaler.py  budget.py  failover.py  healthpoller.py  logstream.py  main.py  models.py  observability.py  security.py  services.py  store.py
backend/app/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py  onprem.py  registry.py
backend/tests/: test_api.py  test_providers.py
cli/: pyproject.toml  requirements.txt
cli/flexai_sdk/: __init__.py  api.py  main.py
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.cjs
dashboard/src/: App.tsx  styles.css  types.ts
examples/vision-service/: Dockerfile.flexai  model.ckpt  requirements.txt  serve.py
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/kubernetes-service/: main.tf
k8s/: inference-stack.yaml
scripts/: smoke_test.ps1
